--- a/SpringSampleProject/src/main/resources/application.properties
+++ b/SpringSampleProject/src/main/resources/application.properties
@@ -2,3 +2,11 @@ spring.application.name=SpringSampleProject
 
 spring.thymeleaf.prefix=classpath:/templates/
 spring.thymeleaf.suffix=.html
+
+spring.datasource.url=jdbc:mysql://localhost:3306/task_management?createDatabaseIfNotExist=true
+spring.datasource.username=root
+spring.datasource.password=Root123@
+
+spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
+spring.jpa.show-sql=true
+spring.jpa.hibernate.ddl-auto=update
