--- a/SpringSampleProject/src/main/resources/application.properties
+++ b/SpringSampleProject/src/main/resources/application.properties
@@ -5,7 +5,7 @@ spring.thymeleaf.suffix=.html
 
 spring.datasource.url=jdbc:mysql://localhost:3306/task_management?createDatabaseIfNotExist=true
 spring.datasource.username=root
-spring.datasource.password=Root123@
+spring.datasource.password=root
 
 spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
 spring.jpa.show-sql=true
